src/components/app.css
body, html, #root {
  width: 100%;
  height: 100%;
}

.App {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #282c34;
}

.game-over {
  top: -4px;
  left: -4px;
  height: 478px;
  width: 478px;
  border-radius: 6px;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 28px;
  color: white;
  background-color: rgba(0, 0, 0, 0.7);
}

.game-grid {
  position: relative;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(4, 1fr);
  border: 4px solid gray;
  border-radius: 6px;
  height: 470px;
  width: 470px;
  background-color: gray;
  outline: none;
}


.grid-item {
  display: inline-grid;
  justify-content: center;
  align-items: center;
  margin: 8px;
  border-radius: 3px;
  font-size: 55px;
  font-weight: bold;
  color: white;
  pointer-events: none;
  user-select: none;
}

@media only screen and (max-width: 800px) {
  .game-grid {
    height: 277px;
    width: 277px;
  }

  .grid-item {
    font-size: 24px;
  }
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.esc {
  margin-left: 4px;
  margin-right: 4px;
}

.header {
  color: white;
  font-size: 48px;
  margin-bottom: 12px;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.header-and-score {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.score {
  color: white;
  font-size: 24px;
}

